add a new paragraph

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>How to know about git hub</h1>
     <h2>Now we are learning Github</h2>
     <p>Learning git hub is vert interesting</p>
+    <p>we are aggrely waiting for it</p>
 </body>
 </html>
