--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Now we are learning Github</h2>
     <p>Learning git hub is vert interesting</p>
     <p>we are aggrely waiting for it</p>
+    <img src="flower" alt="" srcset="">
 </body>
 </html>
